fixing header on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -81,16 +81,18 @@ span {
 
 /* Centered splash layout for initial screen */
 .centered-view.expanded {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;  /* centers vertically */
+  align-items: center;      /* centers horizontally */
+  min-height: 100vh;        /* full viewport height */
   text-align: center;
-  transition: all 0.5s ease;
 }
+@media (min-width: 1000px) {
+  .centered-view.expanded{
+    display:flex
+  }
+}
+
 
 /* Shrunk layout after table is loaded */
 .centered-view.shrunk {
